--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   freezed: ^2.4.2
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
