--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   cached_network_image: ^3.2.3
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
