--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   get_it: ^7.6.0
   intl: ^0.18.1
   meta: ^1.9.1
-  freezed: ^2.4.2
+  freezed: ^2.4.1
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   cached_network_image: ^3.2.3
@@ -54,7 +54,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
   flutter_launcher_icons: ^0.13.1
-#  mocktail: ^0.1.4
+  mocktail:  ^1.0.0
 
 flutter:
 
