--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,13 +57,17 @@ dev_dependencies:
   mocktail: ^1.0.0
   bloc_test: ^9.1.4	
 
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/icon/icon.jpg'
+
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   assets:
     - .env
+    - assets/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
